--- a/pipelines.10.yml
+++ b/pipelines.10.yml
@@ -5,6 +5,7 @@ resources:
     configuration:
       key1: value1
       key2: value2
+      key3: value3
   - name: buildInfoTrigger10
     type: BuildInfo
     configuration:
