--- a/pipelines.5a.yml
+++ b/pipelines.5a.yml
@@ -22,9 +22,10 @@ pipelines:
             - name: propertyCanvas3
             - name: buildInfoTrigger3
         execution:
+          onStart:
+            - add_run_variables testKey="testValue"
           onExecute:
             - sleep 1
-            - add_run_variables "test=test" "key=value"
             - echo "done"
       - name: Test3_1_1_1
         type: Bash
