--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -8,10 +8,10 @@ resources:
         include: main
 
 
-pipelines:
-  - name: A_6805_0001
+pipelines: testReports
+  - name: 
     steps:
-      - name: A_6805_0001_1
+      - name: step_with_tests
         type: Bash
         configuration:
           inputResources:
@@ -19,3 +19,12 @@ pipelines:
         execution:
           onExecute:
             - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/v3_example_1.xml"
+      - name: no_tests_here
+        type: Bash
+        configuration:
+          inputSteps:
+            - name: step_with_tests
+        execution:
+          onExecute:
+            - sleep 1
+            - echo "done"
