--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -11,7 +11,7 @@ resources:
 pipelines:
   - name: testReports
     steps:
-      - name: step_with_tests
+      - name: step_with_tests_1
         type: Bash
         configuration:
           inputResources:
@@ -23,8 +23,18 @@ pipelines:
         type: Bash
         configuration:
           inputSteps:
-            - name: step_with_tests
+            - name: step_with_tests_1
         execution:
           onExecute:
             - sleep 1
             - echo "done"
+      - name: step_with_tests_2
+        type: Bash
+        configuration:
+          inputSteps:
+            - name: no_tests_here
+          inputResources:
+            - name: A_6805_0001_GitRepo
+        execution:
+          onExecute:
+            - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/v3_example_2.xml"
