--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -38,3 +38,21 @@ pipelines:
         execution:
           onExecute:
             - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/v3_example_2.xml"
+      
+      - name: matrix_step
+        type: Matrix
+        stepletMultipliers:
+          environmentVariables:
+            - steplet: 1
+              file: v3_example_1.xml
+            - steplet: 2
+              file: v3_example_2.xml
+        configuration:
+          inputSteps:
+            - name: step_with_tests_2
+          inputResources:
+            - name: A_6805_0001_GitRepo
+        execution:
+          onExecute:
+            - echo "Variation steplet = ${steplet}, file = ${file}"
+            - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/$file"
