--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -55,4 +55,4 @@ pipelines:
         execution:
           onExecute:
             - echo "Variation steplet = ${steplet}, file = ${file}"
-            - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/$file"
+            - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/${file}"
