--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -54,5 +54,5 @@ pipelines:
             - name: A_6805_0001_GitRepo
         execution:
           onExecute:
-            - echo "Variation steplet = ${steplet}, file = ${file}"
+            - echo "Variation steplet ${steplet}, file ${file}"
             - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/${file}"
