--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -55,7 +55,7 @@ pipelines:
         execution:
           onExecute:
             - echo "Variation steplet ${steplet}, file ${file}"
-            - if [[ $steplet == 1 ]]
+            - if [[ $steplet -eq 1 ]];
             - then
             - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/v3_example_1.xml"
             - else
