--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -44,9 +44,9 @@ pipelines:
         stepletMultipliers:
           environmentVariables:
             - steplet: 1
-              file: v3_example_1.xml
+              file_name: v3_example_1.xml
             - steplet: 2
-              file: v3_example_2.xml
+              file_name: v3_example_2.xml
         configuration:
           inputSteps:
             - name: step_with_tests_2
@@ -54,7 +54,7 @@ pipelines:
             - name: A_6805_0001_GitRepo
         execution:
           onExecute:
-            - echo "Variation steplet ${steplet}, file ${file}"
+            - echo "Variation steplet ${steplet}, fileName ${file_name}"
             - | 
               if [[ $steplet -eq 1 ]]; then
                 save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/v3_example_1.xml"
