--- a/pipelines.step_samples.yml
+++ b/pipelines.step_samples.yml
@@ -49,6 +49,16 @@ pipelines:
       - name: promote_app
         type: PromoteBuild
         configuration:
+          environmentVariables:
+            step_env1:
+              default: value1
+              description: step env1 description
+              values:
+                - value1
+                - value2
+                - value3
+              allowCustom: true
+            step_env2: value2
           failOnValidate: true
           copy: true
           targetRepository: prod-go-local
@@ -58,6 +68,7 @@ pipelines:
               trigger: false
           outputResources:
             - name: promotedBuildInfo
+        
 
       - name: deploy_app
         type: Bash
