--- a/pipelines.step_samples.yml
+++ b/pipelines.step_samples.yml
@@ -30,8 +30,8 @@ pipelines:
             - value2
             - value3
           allowCustom: true
-        readOnly:
-          JFROG_CLI_BUILD_NAME: go_app          
+#         readOnly:
+#           JFROG_CLI_BUILD_NAME: go_app         
     steps:
       - name: build_app
         type: GoBuild
