--- a/pipelines.step_samples.yml
+++ b/pipelines.step_samples.yml
@@ -21,17 +21,17 @@ pipelines:
   - name: dev_pipeline
     configuration:
       environmentVariables:
-        env1: value1
-        env2:
-          default: value1
-          description: env2 description
-          values:
-            - value1
-            - value2
-            - value3
+        readOnly:
+          JFROG_CLI_BUILD_NAME: go_app        
+          env1: value1
+          env2:
+            default: value1
+            description: env2 description
+            values:
+              - value1
+              - value2
+              - value3
           allowCustom: true
-#         readOnly:
-#           JFROG_CLI_BUILD_NAME: go_app         
     steps:
       - name: build_app
         type: GoBuild
