--- a/pipelines.withTests.yml
+++ b/pipelines.withTests.yml
@@ -70,3 +70,14 @@ pipelines:
               else
                 save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/v3_example_2.xml"
               fi
+      - name: TestElement_3
+        type: Bash
+        configuration:
+          inputSteps:
+            - name: matrix_step
+          inputResources:
+            - name: A_6805_0001_GitRepo
+        execution:
+          onExecute:
+            - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/test-result.4e487d4f4e582e7f0674f1d643b7c189.xml"
+            - save_tests "$res_A_6805_0001_GitRepo_resourcePath/tests/junit/test-result.9bf1a1b430b262590fc69b1c9e2f1ae1.xml"
